--- a/index.html
+++ b/index.html
@@ -29,18 +29,18 @@
 
         </div>
         <!-- Onda del header -->
-        <div class="encabezado__wave" style="overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M-0.00,50.20 C149.83,150.67 348.82,-50.20 499.43,50.20 L499.43,150.67 L-0.00,150.67 Z" style="stroke: none; fill: #08f;"></path></svg></div>
+        <div class="encabezado__wave" style="overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M-0.00,50.20 C149.83,150.67 348.82,-50.20 532.84,57.99 L508.62,158.10 L-0.00,150.67 Z" style="stroke: none; fill: #fff;"></path></svg></div>
     </header>
 
     <main>
-        <section class="presentacion container">
+        <section class="presentacion contenedor">
             <img src="imagenes/foto.jpg" alt="" class="presentacion__foto">
             <h2 class="subtitulo">Mi nombre es: Saúl Suaste</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates incidunt explicabo quam, a pariatur reprehenderit iste sint molestiae maxime. Nihil consectetur id laudantium quisquam et optio sequi assumenda aut laboriosam.</p>
             <a href="#" class="presentacion__cta">Contactame</a>
         </section>
 
-        <section class="about container">
+        <section class="about contenedor">
             <div class="about__texto">
                 <h2 class="subtitulo">Mis habilidades</h2>
                 <p class="about__parrafo">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab voluptate dolor, et iure voluptates nisi numquam. Ratione eligendi ab vero repellendus asperiores commodi veniam, illum porro, aspernatur exercitationem eius vel!</p>
@@ -139,11 +139,11 @@
     </main>
 
     <footer class="footer">
-        <div class="container footer__grid">
+        <div class="contenedor footer__grid">
             <nav class="nav nav--footer">
                 <a href="#" class="nav__items nav__item--footer">Inicio</a>
                 <a href="#" class="nav__items nav__item--footer">Sobre mi</a>
-                <a href="#" class="nav__items nav__item--footer">Mis skilld</a>
+                <a href="#" class="nav__items nav__item--footer">Mis skills</a>
                 <a href="#" class="nav__items nav__item--footer">Proyectos</a>
             </nav>
 
