--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <section class="presentacion contenedor">
             <img src="imagenes/foto.jpg" alt="" class="presentacion__foto">
             <h2 class="subtitulo">Mi nombre es: Saúl Suaste</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates incidunt explicabo quam, a pariatur reprehenderit iste sint molestiae maxime. Nihil consectetur id laudantium quisquam et optio sequi assumenda aut laboriosam.</p>
+            <p class="presentacion__p">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates incidunt explicabo quam, a pariatur reprehenderit iste sint molestiae maxime. Nihil consectetur id laudantium quisquam et optio sequi assumenda aut laboriosam.</p>
             <a href="#" class="presentacion__cta">Contactame</a>
         </section>
 
