Portafolio terminado (responsive design)

--- a/index.html
+++ b/index.html
@@ -151,19 +151,19 @@
                 <h3 class="footer__titulo">Contactame</h3>
                 <div class="footer__iconos">
                     <span class="footer__contenedor-icono">
-                        <a href="#" class="fab fa-instagram"></a>
+                        <a href="#" class="fab fa-instagram red-social"></a>
                     </span>
 
                     <span class="footer__contenedor-icono">
-                        <a href="#" class="fab fa-facebook-f"></a>
+                        <a href="#" class="fab fa-facebook-f red-social"></a>
                     </span>
 
                     <span class="footer__contenedor-icono">
-                        <a href="#" class="fab fa-whatsapp"></a>
+                        <a href="#" class="fab fa-whatsapp red-social"></a>
                     </span>
 
                     <span class="footer__contenedor-icono">
-                        <a href="#" class="fab fa-twitter"></a>
+                        <a href="#" class="fab fa-twitter red-social"></a>
                     </span>
                 </div>
             </section>
